--- a/app/assets/css/lists.css
+++ b/app/assets/css/lists.css
@@ -18,18 +18,31 @@
   box-shadow: 0 2px 1px rgba(170, 170, 170, 0.25);
 }
 
+.list-item .top {
+  display: flex;
+  flex-direction: row;
+}
+
 .list-item .title {
   position: relative;
+  display: inline-block;
+  width: 85%;
   font-size: 16px;
-  line-height: 32px;
+  line-height: 20px;
   text-transform: lowercase;
   word-wrap: break-word;
 }
 
 .list-item .provider {
   display: block;
-  font-size: 11px;
+  margin: 15px 25px;
+  font-size: 12px;
+  font-weight: 700;
   line-height: 16px;
+  padding: 17px;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .list-item .bottom {
@@ -69,6 +82,7 @@
   font-size: 13px;
   margin: 0 10px;
   vertical-align: middle;
+  color: #3B3C3B;
 }
 
 .list-item .size {
