--- a/app/assets/css/extras.css
+++ b/app/assets/css/extras.css
@@ -48,20 +48,24 @@
   }
 }
 
+
 /**
  * Media
  */
+
 .media {
   display: flex;
   flex-wrap: wrap;
   margin: 0 0 1em;
   /* Modifers */
 }
+
 @media (min-width: 64em) {
   .media {
     margin: 0 0 2em;
   }
 }
+
 .media--card {
   margin: 0;
   background: white;
@@ -71,6 +75,7 @@
 .media__item {
   margin: 0 0 1em;
 }
+
 .media__item img {
   display: block;
 }
@@ -79,6 +84,7 @@
   width: 100%;
   /* Block Modifers */
 }
+
 .media--card .media__body {
   padding: 0 1em;
 }
@@ -100,4 +106,25 @@
 
 .media__body-list-data {
   margin: 0 1em 1em 0;
+}
+
+span.provider {
+  height: 26px;
+  line-height: 23px;
+  padding: 0 9px 0 8px;
+  font-size: 12px;
+  color: #555;
+  text-decoration: none;
+  text-shadow: 0 1px white;
+  background: #fafafa;
+  border-width: 1px 1px 1px 1px;
+  border-style: solid;
+  border-color: #dadada #d2d2d2 #c5c5c5;
+  border-radius: 3px 0 0 3px;
+  background-image: -webkit-linear-gradient(top, #fcfcfc, #f0f0f0);
+  background-image: -moz-linear-gradient(top, #fcfcfc, #f0f0f0);
+  background-image: -o-linear-gradient(top, #fcfcfc, #f0f0f0);
+  background-image: linear-gradient(to bottom, #fcfcfc, #f0f0f0);
+  -webkit-box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.7), 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.7), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
