--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -73,8 +73,28 @@ body {
   color: pink;
 }
 
+.long-text {
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
 
 /** LAYOUT **/
+
+#wrapper {
+  
+}
 
 .container {
   padding-top: 50px;
@@ -119,6 +139,7 @@ body {
   display: block;
 }
 
+/** BUTTONS **/
 button {
   border-radius: 20px;
   border: none;
@@ -127,19 +148,11 @@ button {
   letter-spacing: 1px;
   font-size: 11px;
   outline: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-  -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-  -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-  -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
   background-color: transparent;
   border-radius: 4px;
   border: 0;
-  box-shadow: inset 0 0 0 2px #585858;
-  color: #585858 !important;
+  box-shadow: inset 0 0 0 2px #fff;
+  color: #fff !important;
   cursor: pointer;
   display: inline-block;
   font-size: 0.8em;
@@ -157,8 +170,14 @@ button {
 }
 
 button:hover {
-  color: #fa8072 !important;
-  box-shadow: inset 0 0 0 2px #fa8072;
+  color: #fff !important;
+}
+
+form button[type="submit"] {
+  margin-left: 25px;
+  top: -6px;
+  position: relative;
+  background-color: #fa8072;
 }
 
 .is-visible {
@@ -178,6 +197,7 @@ button:hover {
   float: left;
 }
 
+
 /** LISTS **/
 
 ol {
@@ -195,6 +215,7 @@ ol {
 ol ol {
   margin: 0 0 0 2em;
 }
+
 
 /** WIDTHS AND HEIGHTS **/
 
