--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -1,5 +1,26 @@
 /** OVERRIDES **/
 
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,700");
+@import url('./font-awesome.min.css');
+@font-face {
+  font-family: 'h5u';
+  src: url("../fonts/h5u.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body, input, textarea, select {
+  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-size: 13pt;
+  line-height: 1.5em;
+  color: #676d79;
+  font-weight: 300;
+  /*background: #272d39;*/
+  background: rgba(55, 61, 73, 0.975);
+  color: #fff;
+  box-shadow: none;
+}
+
 .navbar {
   position: fixed;
   top: 0;
@@ -81,11 +102,14 @@
 
 
 /** FILTERS **/
+
+
 /* --------------------------------
 
 xfilter
 
 -------------------------------- */
+
 .cd-filter {
   position: absolute;
   top: 0;
@@ -112,6 +136,7 @@ xfilter
   -moz-transition: -moz-transform 0.3s, box-shadow 0.3s;
   transition: transform 0.3s, box-shadow 0.3s;
 }
+
 .cd-filter::before {
   /* top colored bar */
   content: '';
@@ -123,9 +148,11 @@ xfilter
   background-color: #41307c;
   z-index: 2;
 }
+
 .cd-filter form {
   padding: 70px 20px;
 }
+
 .cd-filter .cd-close {
   position: absolute;
   top: 0;
@@ -143,9 +170,11 @@ xfilter
   transition: opacity 0.3s;
   z-index: 3;
 }
+
 .no-touch .cd-filter .cd-close:hover {
   background: #32255f;
 }
+
 .cd-filter.filter-is-visible {
   -webkit-transform: translateX(0);
   -moz-transform: translateX(0);
@@ -154,9 +183,11 @@ xfilter
   transform: translateX(0);
   box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.2);
 }
+
 .cd-filter.filter-is-visible .cd-close {
   opacity: 1;
 }
+
 @media only screen and (min-width: 1170px) {
   .cd-filter {
     width: 20%;
@@ -181,9 +212,11 @@ xfilter
   background: transparent url("../img/cd-icon-filter.svg") no-repeat center center;
   z-index: 3;
 }
+
 .cd-filter-trigger.filter-is-visible {
   pointer-events: none;
 }
+
 @media only screen and (min-width: 1170px) {
   .cd-filter-trigger {
     width: auto;
@@ -207,14 +240,17 @@ xfilter
   }
 }
 
+
 /* --------------------------------
 
 xcustom form elements
 
 -------------------------------- */
+
 .cd-filter-block {
   margin-bottom: 1.6em;
 }
+
 .cd-filter-block h4 {
   /* filter block title */
   position: relative;
@@ -230,9 +266,11 @@ xcustom form elements
   user-select: none;
   cursor: pointer;
 }
+
 .no-touch .cd-filter-block h4:hover {
   color: #41307c;
 }
+
 .cd-filter-block h4::before {
   /* arrow */
   content: '';
@@ -251,6 +289,7 @@ xcustom form elements
   -moz-transition: -moz-transform 0.3s;
   transition: transform 0.3s;
 }
+
 .cd-filter-block h4.closed::before {
   -webkit-transform: translateY(-50%) rotate(-90deg);
   -moz-transform: translateY(-50%) rotate(-90deg);
@@ -258,18 +297,16 @@ xcustom form elements
   -o-transform: translateY(-50%) rotate(-90deg);
   transform: translateY(-50%) rotate(-90deg);
 }
-.cd-filter-block input, .cd-filter-block select,
-.cd-filter-block .radio-label::before,
-.cd-filter-block .checkbox-label::before {
+
+.cd-filter-block input, .cd-filter-block select, .cd-filter-block .radio-label::before, .cd-filter-block .checkbox-label::before {
   /* shared style for input elements */
   font-family: "Open Sans", sans-serif;
   border-radius: 0;
   background-color: #ffffff;
   border: 2px solid #e6e6e6;
 }
-.cd-filter-block input[type='search'],
-.cd-filter-block input[type='text'],
-.cd-filter-block select {
+
+.cd-filter-block input[type='search'], .cd-filter-block input[type='text'], .cd-filter-block select {
   width: 100%;
   padding: .8em;
   -webkit-appearance: none;
@@ -279,13 +316,13 @@ xcustom form elements
   appearance: none;
   box-shadow: none;
 }
-.cd-filter-block input[type='search']:focus,
-.cd-filter-block input[type='text']:focus,
-.cd-filter-block select:focus {
+
+.cd-filter-block input[type='search']:focus, .cd-filter-block input[type='text']:focus, .cd-filter-block select:focus {
   outline: none;
   background-color: #ffffff;
   border-color: #41307c;
 }
+
 .cd-filter-block input[type='search'] {
   /* custom style for the search element */
   border-color: transparent;
@@ -293,13 +330,16 @@ xcustom form elements
   /* prevent jump - ios devices */
   font-size: 1.6rem !important;
 }
+
 .cd-filter-block input[type='search']::-webkit-search-cancel-button {
   display: none;
 }
+
 .cd-filter-block .cd-select {
   /* select element wrapper */
   position: relative;
 }
+
 .cd-filter-block .cd-select::after {
   /* switcher arrow for select element */
   content: '';
@@ -318,22 +358,26 @@ xcustom form elements
   background: url("../img/cd-icon-arrow.svg") no-repeat center center;
   pointer-events: none;
 }
+
 .cd-filter-block select {
   cursor: pointer;
   font-size: 1.4rem;
 }
+
 .cd-filter-block select::-ms-expand {
   display: none;
 }
+
 .cd-filter-block .list li {
   position: relative;
   margin-bottom: .8em;
 }
+
 .cd-filter-block .list li:last-of-type {
   margin-bottom: 0;
 }
-.cd-filter-block input[type=radio],
-.cd-filter-block input[type=checkbox] {
+
+.cd-filter-block input[type=radio], .cd-filter-block input[type=checkbox] {
   /* hide original check and radio buttons */
   position: absolute;
   left: 0;
@@ -343,8 +387,8 @@ xcustom form elements
   opacity: 0;
   z-index: 2;
 }
-.cd-filter-block .checkbox-label,
-.cd-filter-block .radio-label {
+
+.cd-filter-block .checkbox-label, .cd-filter-block .radio-label {
   padding-left: 24px;
   font-size: 1.4rem;
   -webkit-user-select: none;
@@ -352,9 +396,8 @@ xcustom form elements
   -ms-user-select: none;
   user-select: none;
 }
-.cd-filter-block .checkbox-label::before, .cd-filter-block .checkbox-label::after,
-.cd-filter-block .radio-label::before,
-.cd-filter-block .radio-label::after {
+
+.cd-filter-block .checkbox-label::before, .cd-filter-block .checkbox-label::after, .cd-filter-block .radio-label::before, .cd-filter-block .radio-label::after {
   /* custom radio and check boxes */
   content: '';
   display: block;
@@ -366,27 +409,29 @@ xcustom form elements
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-.cd-filter-block .checkbox-label::before,
-.cd-filter-block .radio-label::before {
+
+.cd-filter-block .checkbox-label::before, .cd-filter-block .radio-label::before {
   width: 16px;
   height: 16px;
   left: 0;
 }
-.cd-filter-block .checkbox-label::after,
-.cd-filter-block .radio-label::after {
+
+.cd-filter-block .checkbox-label::after, .cd-filter-block .radio-label::after {
   /* check mark - hidden */
   display: none;
 }
+
 .cd-filter-block .checkbox-label::after {
   /* check mark style for check boxes */
   width: 16px;
   height: 16px;
   background: url("../img/cd-icon-check.svg") no-repeat center center;
 }
-.cd-filter-block .radio-label::before,
-.cd-filter-block .radio-label::after {
+
+.cd-filter-block .radio-label::before, .cd-filter-block .radio-label::after {
   border-radius: 50%;
 }
+
 .cd-filter-block .radio-label::after {
   /* check mark style for radio buttons */
   width: 6px;
@@ -394,13 +439,13 @@ xcustom form elements
   background-color: #ffffff;
   left: 5px;
 }
-.cd-filter-block input[type=radio]:checked + label::before,
-.cd-filter-block input[type=checkbox]:checked + label::before {
+
+.cd-filter-block input[type=radio]:checked+label::before, .cd-filter-block input[type=checkbox]:checked+label::before {
   border-color: #41307c;
   background-color: #41307c;
 }
-.cd-filter-block input[type=radio]:checked + label::after,
-.cd-filter-block input[type=checkbox]:checked + label::after {
+
+.cd-filter-block input[type=radio]:checked+label::after, .cd-filter-block input[type=checkbox]:checked+label::after {
   display: block;
 }
 
